[package]
name = "toekomst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", optional = true, features = ["nrf52840"] }

nrf52840-hal = { version = "0.16.0" }

embedded-graphics = "0.7.1"
embedded-graphics-simulator = { version = "0.4.0", optional = true }
sharp-memory-display = { git = "https://github.com/BALD-rust/sharp-memory-display/", optional = true }

heapless = "0.7"
strum_macros = "0.24.3"
log = "0.4.17"

crossbeam-queue = "0.3.8"

[dev-dependencies]
env_logger = "0.10.0"

[features]
simulator = [
    "embassy-executor/std",
    "embassy-time/std",
    "embassy-sync/std",
    "dep:embedded-graphics-simulator"
]
sharp = [
    "dep:sharp-memory-display",
    "dep:embassy-nrf"
]
